@@ -297,7 +297,7 @@ nr_typeface_gnome_glyph_outline_get (NRTypeFace *tf, unsigned int glyph, unsigne
 	    bpath.path = (NArtBpath *) gnome_font_face_get_glyph_stdoutline (tfg->face, glyph);
 	    bbox.x0 = bbox.y0 = 1e18;
 	    bbox.x1 = bbox.y1 = -1e18;
-	    nr_path_matrix_bbox_union(&bpath, NR::identity(), &bbox, 0.25);
+	    nr_path_matrix_bbox_union(&bpath, NR::identity(), &bbox);
 	    if (!nr_rect_d_test_empty (&bbox)) {
 		NR::Matrix t(1.0,
 					 0.0,
